# IRONFISH

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  docker-compose.alpine.yml  docker-compose.yml  pre-commit
.github/workflows/: ci.yml  release.yml  security.yml
.husky/: pre-commit
config/: default.toml
crates/ironfish-api/: Cargo.toml  build.rs
crates/ironfish-api/proto/: chess.proto
crates/ironfish-api/src/: lib.rs  router.rs
crates/ironfish-api/src/graphql/: mod.rs  resolvers.rs  schema.rs
crates/ironfish-api/src/grpc/: mod.rs  service.rs
crates/ironfish-api/src/rest/: handlers.rs  mod.rs
crates/ironfish-api/src/ws/: handler.rs  manager.rs  mod.rs  protocol.rs  session.rs
crates/ironfish-auth/: Cargo.toml
crates/ironfish-auth/src/: lib.rs  middleware.rs  store.rs  token.rs
crates/ironfish-cli/: Cargo.toml
crates/ironfish-cli/src/: main.rs
crates/ironfish-cli/src/commands/: admin.rs  cluster.rs  mod.rs  node.rs  token.rs
crates/ironfish-cluster/: Cargo.toml
crates/ironfish-cluster/src/: cluster_service.rs  gossip.rs  lib.rs  load_balancer.rs  membership.rs  network.rs  node.rs
crates/ironfish-cluster/src/consensus/: bully.rs  hybrid.rs  mod.rs  raft.rs
crates/ironfish-cluster/src/discovery/: dns.rs  mod.rs  multicast.rs  seed.rs  static_conf.rs
crates/ironfish-core/: Cargo.toml
crates/ironfish-core/src/: error.rs  lib.rs  traits.rs
crates/ironfish-core/src/types/: analysis.rs  chess.rs  cluster.rs  mod.rs  token.rs
crates/ironfish-server/: Cargo.toml
crates/ironfish-server/src/: app.rs  config.rs  main.rs
crates/ironfish-stockfish/: Cargo.toml
crates/ironfish-stockfish/src/: analysis.rs  engine.rs  lib.rs  pool.rs
crates/ironfish-tests/: Cargo.toml
crates/ironfish-tests/src/: api_tests.rs  cluster_tests.rs  docker_tests.rs  helpers.rs  lib.rs  ws_tests.rs
docs/wiki/: API-Reference.md  Architecture.md  Deployment.md  Development.md  Home.md
