[workspace]
resolver = "2"
members = [
    "crates/ironfish-core",
    "crates/ironfish-stockfish",
    "crates/ironfish-auth",
    "crates/ironfish-cluster",
    "crates/ironfish-api",
    "crates/ironfish-cli",
    "crates/ironfish-server",
    "crates/ironfish-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ironfish Contributors"]
license = "MIT"
repository = "https://github.com/ironfish/ironfish"

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

axum = { version = "0.8.6", features = ["macros", "ws"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

tonic = { version = "0.14.3", features = ["gzip"] }
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
tonic-reflection = "0.14.2"
prost = "0.14.3"
prost-types = "0.14.3"

async-graphql = { version = "7.2", features = ["chrono", "uuid"] }
async-graphql-axum = "7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

config = "0.14"

clap = { version = "4.4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

ring = "0.17"
base64 = "0.22"

sled = "0.34.7"

socket2 = { version = "0.5", features = ["all"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0"

futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.28"

ironfish-core = { path = "crates/ironfish-core" }
ironfish-stockfish = { path = "crates/ironfish-stockfish" }
ironfish-auth = { path = "crates/ironfish-auth" }
ironfish-cluster = { path = "crates/ironfish-cluster" }
ironfish-api = { path = "crates/ironfish-api" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
