[package]
name = "ironfish-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ironfish-core = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
