[package]
name = "ironfish-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ironfish-core = { workspace = true }
ironfish-auth = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
socket2 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
