[package]
name = "ironfish-stockfish"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ironfish-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
